# generative-images

./: .gitignore  API_README.md  CROSS_PLATFORM_SETUP.md  HARDWARE_AWARE_FEATURES.md  MODERNIZATION_SUMMARY.md  README.md  UV_SETUP.md  app.py  check_versions.py  demo_api.py  diagnose_nan_issue.py  experiments.db  fix_blank_images.py  launch.py  launch_real.py  launch_simple.py  main.py  optimize_cpu_gpu_usage.py  pyproject.toml  quick_gpu_test.py  requirements.txt  run_gpu_optimized_demo.py  run_linux.sh  run_macos.sh  run_windows.bat  setup.py  system_specs.py  test_complete_system.py  test_complete_workflow.py  test_cpu_gpu_utilization.py  test_cpu_offload_fix.py  test_euler_fix.py  test_exp.db  test_experiment_result_fix.py  test_final_integration.py  test_fixes.py  test_float32_fix.py  test_gpu.py  test_gpu_only.py  test_gpu_utilization.py  (+22 more)
.kiro/specs/academic-multimodal-llm-system/: design.md  requirements.md  tasks.md
.kiro/steering/: no_mocking_policy.md
config/: system_config.json
docs/: API.md  ARCHITECTURE.md  README.md  TROUBLESHOOTING.md
outputs/metadata/: outputs.json
src/: __init__.py
src/api/: __init__.py  api_server.py  dependencies.py  model_management.py  server.py
src/core/: __init__.py  config.py  cross_platform_hardware.py  generation_workflow.py  gpu_optimizer.py  hardware_profiles.py  hardware_recommendations.py  interfaces.py  llm_controller.py  logging.py  memory_manager.py  model_downloader.py  model_registry.py  ollama_integration.py  output_manager.py  resource_manager.py  system_integration.py  thermal_monitor.py  workflow_coordinator.py
src/data/: __init__.py  dataset_organizer.py  experiment_tracker.py  license_classifier.py  research_crawler.py
src/hardware/: __init__.py  detector.py  memory_manager.py  profiles.py
src/pipelines/: __init__.py  frame_processor.py  image_generation.py  lora_training.py  result_comparison.py  temporal_consistency.py  temporal_training.py  training_comparison.py  training_monitor.py  training_optimizer.py  video_dataset.py  video_generation.py  video_lora_adapter.py
src/ui/: __init__.py  compliance_controls.py  experiment_tracking.py  launcher.py  modern_interface.py  research_interface.py  research_interface_real.py  research_interface_simple.py  simple_working_generator.py  ui_integration.py
tests/: __init__.py
tests/integration/: __init__.py  test_api_integration.py  test_experiment_tracking_integration.py  test_image_pipeline_integration.py  test_ollama_integration.py  test_research_crawler.py
tests/performance/: test_video_performance.py
tests/unit/: test_api_endpoints.py  test_compliance_controls.py  test_config.py  test_dataset_organizer.py  test_experiment_tracking.py  test_hardware_detector.py  test_image_generation.py  test_interfaces.py  test_license_classifier.py  test_license_validation.py  test_llm_controller.py  test_lora_training.py  test_memory_manager.py  test_research_interface.py  test_training_comparison.py  test_training_monitor.py  test_training_optimizer.py  test_video_generation.py  test_video_training.py  test_workflow_coordinator.py
