[project]
name = "ai-content-generator"
version = "1.0.0"
description = "Cross-platform AI content generator with thermal safety and hardware optimization"
authors = [
    {name = "AI Content Generator Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    # Core AI libraries
    "torch>=2.1.0",
    "torchvision>=0.16.0", 
    "transformers>=4.36.0",
    "diffusers>=0.25.0",
    "accelerate>=0.25.0",
    
    # UI Framework
    "gradio>=4.8.0",
    
    # Image and video processing
    "pillow>=10.1.0",
    "opencv-python>=4.8.1",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",
    
    # Scientific computing
    "numpy>=1.24.0",
    
    # Model management
    "huggingface-hub>=0.19.0",
    "safetensors>=0.4.0",
    
    # System utilities
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Hardware optimization (optional, may require compilation)
optimization = [
    "xformers>=0.0.23",
    "bitsandbytes>=0.41.0",
]

# API server (optional)
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

# All optional dependencies
all = [
    "ai-content-generator[optimization,api,dev]"
]

[project.scripts]
ai-generator = "app:main"

[project.urls]
Homepage = "https://github.com/your-username/ai-content-generator"
Repository = "https://github.com/your-username/ai-content-generator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0", 
    "flake8>=6.0.0",
]

# Index configuration for PyTorch
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]